--- a/lesson_01/form/style.css
+++ b/lesson_01/form/style.css
@@ -1,3 +1,31 @@
+* {
+  margin:0;
+  padding: 0;
+}
+
 body {
   background: #e8e8e8;
 }
+.form__wrapper {
+  max-width: 840px;
+  margin: 10px auto 0;
+  background-color: rgb(255, 255, 255);
+  border-right: 1px solid #d9d9d9;
+  box-shadow: 0px 2px 1.8px 0.2px rgba(0, 0, 0, 0.25);
+}
+/*=============header==============*/
+.form__header {
+  border-top: 2px solid #e62b1e;
+  padding: 30px;
+}
+.form__header h3 {
+  text-align: center;
+  font-size: 31px;
+  font-family: "Arial";
+  color: rgb(51, 51, 51);
+  font-weight: bold;
+}
+
+
+
+
