--- a/lesson_01/form/style.css
+++ b/lesson_01/form/style.css
@@ -94,3 +94,50 @@ a.gl:hover {
   width: 300px;
   outline:none;
 }
+/*============checkbox===========*/
+.checkBox + label {
+  cursor: pointer;
+}
+.checkBox:not(checked) {
+  position: absolute;
+  opacity: 0;
+}
+.checkBox:not(checked) + label {
+  display: block;
+  position: relative; 
+  padding-left: 20px; 
+}
+.checkBox:not(checked) + label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 3px;
+  width: 12px;
+  height: 12px;
+  border-radius: 2px;
+  background: #3b99fc;
+}
+.checkBox:checked + label:before {
+  background-image: url(img/check.png);
+}
+.form__input--btn {
+  display: inline-block;
+  margin-top: 20px;
+  border-radius: 3px;
+  border:none;
+  background-color: rgb(37, 37, 37);
+  font-size: 14px;
+  font-family: "Arial";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  outline:none;
+  padding: 15px 30px;
+  margin-right: 50px;
+  cursor: pointer
+}
+.form__input--btn:hover {
+  background-color: #666666;
+}
+
+
+
