--- a/lesson_01/form/style.css
+++ b/lesson_01/form/style.css
@@ -6,6 +6,8 @@
 
 body {
   background: #e8e8e8;
+  font-family: "Arial";
+
 }
 .form__wrapper {
   max-width: 844px;
@@ -19,22 +21,16 @@ body {
 }
 /*=============header==============*/
 .form__header {
-  
   padding: 30px;
 }
-.form__header h3 {
+.form__header--title {
   text-align: center;
   font-size: 31px;
-  font-family: "Arial";
   color: rgb(51, 51, 51);
   font-weight: bold;
 }
 /*=============content==================*/
 .form__content {
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
   display: flex;
   flex-wrap: wrap;
   background: #f3f3f3;
@@ -58,11 +54,8 @@ body {
   padding: 15px;
   border-radius: 3px;
   text-align: center;
-}
-a.form__link {
   text-decoration: none;
   font-size: 14px;
-  font-family: "Arial";
   color: rgb(255, 255, 255);
   font-weight: bold;
 }
@@ -73,7 +66,7 @@ a.form__link {
   background-position: 15px 10px;
 }
 
-a.fb:hover {
+.fb:hover {
   background-color: #385388;
 }
 .gl {
@@ -83,19 +76,17 @@ a.fb:hover {
   background-repeat: no-repeat;
   background-position: 15px 10px;
 }
-a.gl:hover {
+.gl:hover {
   background-color: #cd4c3c;
 }
 .form__content--block-2 p,
 .form__content--block-2 span{
   font-size: 14px;
-  font-family: "Arial";
   color: rgb(51, 51, 51);
   font-weight: bold;
 }
-
-.form__input--text,
-.form__input--password {
+.form__input--text
+{
   display: block;
   width: 100%;
   border:1px solid rgb(221, 221, 221);
@@ -138,7 +129,6 @@ a.gl:hover {
   border:none;
   background-color: rgb(37, 37, 37);
   font-size: 14px;
-  font-family: "Arial";
   color: rgb(255, 255, 255);
   font-weight: bold;
   outline:none;
@@ -149,10 +139,6 @@ a.gl:hover {
   background-color: #666666;
 }
 .form__input--btn-block {
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -160,9 +146,7 @@ a.gl:hover {
 }
 .form__input--link {
   font-size: 14px;
-  font-family: "Arial";
   color: rgb(37, 37, 37);
-  
   text-decoration: none;
   align-self: center;
   margin-top: 15px;
@@ -186,13 +170,11 @@ a.gl:hover {
 
 .form-footer p {
   font-size: 18px;
-  font-family: "Arial";
   color: rgb(102, 102, 102);
 }
 .form__footer--link {
   color: #000;
   font-size: 18px;
-  font-family: "Arial";
   font-weight: bold;
 }
 /*==============media -queries========*/
@@ -225,7 +207,6 @@ a.gl:hover {
   display: inline-block;
   max-width: 300px;
   text-align: left;
-  width: 100%;
   min-width: 250px;
 }
 }
